examples/invalid_feature_secret/unknown_feature_provider.argx
module invalid.unknown_feature_provider
feature F { provider Ghost status experimental default disabled requires approval }
